buildscript {
	repositories {
		flatDir {
			dirs 'libs'
		}
		jcenter()
		maven { 
			name = 'forge'
			url = 'https://files.minecraftforge.net/maven' 
		}
		maven {
		   name = 'sponge'
		   url = 'https://repo.spongepowered.org/maven'
		}
		jcenter()
		mavenCentral()
	}
	dependencies {
		classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.+', changing: true
		classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
	}
}

apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'org.spongepowered.mixin'
apply plugin: 'maven-publish'
apply plugin: 'eclipse'

version = "${project.modVersion}"
group = 'net.skds.lonely_project'
archivesBaseName = 'lonely'

//sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'

java.toolchain.languageVersion = JavaLanguageVersion.of(8)

minecraft {	
	mappings channel: 'snapshot', version: '20201028-1.16.3'
    //accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

	runs {
		client {
			workingDirectory project.file('run')
			arg "--mixin"
			arg "mixins.lonely_project.json"
			arg "--username=Sasai_Kudasai_BM"
			jvmArgs "-Xmx3G"
			jvmArgs "-XX:+UseConcMarkSweepGC"
			property "mixin.debug.export", "true"
			property "mixin.debug", "true"
			property "mixin.env.disableRefMap", "true"
			property 'forge.logging.console.level', 'info'
			property 'terminal.ansi', 'true'
			mods {
				skds {
					source sourceSets.main
				}
			}
		}

		server {
			workingDirectory project.file('run')
			arg '--mixin'
			arg "mixins.lonely_project.json"
			arg "--username=Sasai_Kudasai_BM"
			jvmArgs "-Xmx3G"
			jvmArgs "-XX:+UseConcMarkSweepGC"
			property "mixin.env.disableRefMap", "true"
			property 'forge.logging.console.level', 'info'
			property 'terminal.ansi', 'true'
			mods {
				skds {
					source sourceSets.main
				}
			}
		}
	}
}

configurations {
	embed
	compile.extendsFrom(embed)
}

dependencies {
	minecraft 'net.minecraftforge:forge:1.16.5-36.0.14'
	embed('org.spongepowered:mixin:0.8.4') { transitive = false }
	annotationProcessor 'org.spongepowered:mixin:0.8.4:processor'
	implementation fileTree(dir: 'libs', include: ['*.jar'])
}

sourceSets {
	main {
		resources {
			srcDirs 'src/main/resources'
			srcDirs 'generated'
			exclude 'META-INF/mods-dev.toml'
		}
	}
}

def modsTomlSpec = copySpec {
	from('src/main/resources') {
		include 'META-INF/mods-dev.toml'
		rename('(.*)mods-dev(.*)','mods.toml')
		expand 'version': project.version,
				'ForgeVR': project.ForgeVR,
				'MCVR': project.MCVR,
				'modId': project.modId,
				'modName': project.modName,
				'coreVR': project.coreVR
	}
}

def buildPaths = [
	"$rootDir/generated",
	"$rootDir/bin/main",
	"$rootDir/build/resources/main"
]

task replaceResources {
	copy {
		duplicatesStrategy 'include'
		outputs.upToDateWhen { false }
		with modsTomlSpec
		into processResources.destinationDir
	}
	buildPaths.each { path ->
		copy {
			duplicatesStrategy 'include'
			outputs.upToDateWhen { false }
			with modsTomlSpec
			into path
		}
		
	}
}

project.tasks.withType(Jar) { jarTask -> 
	jarTask.manifest {
		attributes([
			"MixinConfigs": 'mixins.lonely_project.json',
			"Specification-Title": project.name,
			"Implementation-Title": project.name,
			"Implementation-Version": "${version}"
		])
	}
}

processResources {
	duplicatesStrategy 'include'
	finalizedBy replaceResources
}

//def secret = new Properties()
//file("secret.properties").withInputStream {
//    stream -> secret.load(stream)
//}

task deobfJar(type:Jar) {
	from sourceSets.main.output
	classifier 'deobf'
}

artifacts {
	archives deobfJar
}


//publishing {
//    publications {
//        mavenJava(MavenPublication) {
//            //artifact jar
//           from components.java
//           groupId = 'com.github.Sasai-Kudasai-BM'
//           artifactId = "Lonely"
//           version = project.version
//        }
//    }
//    repositories {
//   	 	maven { url 'https://jitpack.io' 
//			authentication(userName: secret.user, password: secret.pass)
//      		//authentication {
//       		//username = secret.user
//       		//password = secret.pass
//      		//}
//	  	}
//    }
//}


mixin {
	//add sourceSets.main, 'mixins.' + project.modId + '.refmap.json'
	add sourceSets.main, 'mixins.lonely_proj.refmap.json'
}